cmake_minimum_required(VERSION 3.4)
project(laboratory_03)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON) 
add_library(formatter STATIC /home/olga/olgaGor03/workspace/projects/lab03/lab03/formatter_lib/formatter.cpp)
include_directories(/home/olga/olgaGor03/workspace/projects/lab03/lab03/formatter_lib)
